<resources>
    <string name="app_name">Capstone</string>
    <string name="home">Home</string>
    <string name="under_home">Get Information About Fruit</string>
    <string name="search">search...</string>
    <string name="apple">APPLE</string>
    <string name="predict">Predict</string>
    <string name="product_name">product name</string>
    <string name="txt_gallery">Select from gallery</string>
    <string name="txt_camera">Select from camera</string>
    <string name="or">Or</string>
    <string name="history">History</string>
    <string name="ripeness">Ripeness Level : </string>
    <string name="latin">Latin name</string>
    <string name="fruit_desc">Fruit Description</string>
    <string name="nutrient_table">Nutrient Table</string>
    <string name="fresh">FRESH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="hint">username / email</string>
    <string name="logout">Logout</string>
</resources>