<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#000000"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txt_under_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/under_home"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/txt_home"
        app:layout_constraintStart_toStartOf="@id/txt_home"/>
    <SearchView
        android:id="@+id/searchview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_search"
        android:layout_margin="20dp"
        android:queryHint="@string/search"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/txt_under_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recv_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/searchview"
        app:layout_constraintStart_toStartOf="@id/searchview"
        app:layout_constraintEnd_toEndOf="@id/searchview"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/main_menu"
        android:background="@drawable/bg_bottom_nav"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>