<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/detail_background"
            android:layout_marginTop="200dp"
            android:paddingTop="25dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txt_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apple"
                android:textColor="#263238"
                android:textStyle="bold"
                android:textSize="35sp"/>
            <TextView
                android:id="@+id/txt_detail_latin_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latin"
                android:textColor="#607D8B"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fruit_desc"
                android:textStyle="bold"
                android:textColor="#263238"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/txt_detail_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="lorem ipsum"
                android:textColor="#263238"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nutrient_table"
                android:textStyle="bold"
                android:textColor="#263238"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/txt_detail_nutrient_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="lorem ipsum"
                android:textColor="#263238"
                android:textSize="15sp"/>
        </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>